--- a/ArmyProjects/Uval3/MainWindow.xaml
+++ b/ArmyProjects/Uval3/MainWindow.xaml
@@ -23,7 +23,7 @@
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
 
-        <Button Name="ButSave" Content="Сохранить изменения" HorizontalAlignment="Right" VerticalAlignment="Center" Width="auto" Height="28" Margin="0,10,10,12"/>
+        <Button Name="ButSave" Content="  Сохранить изменения  " HorizontalAlignment="Right" VerticalAlignment="Center" Width="auto" Height="28" Margin="0,10,10,12"/>
         <Label Content="Поиск" Height="50" Width="65" HorizontalAlignment="Left" VerticalContentAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Center" Margin="8,0,0,0" Padding="0" Grid.IsSharedSizeScope="True" FontSize="18"/>
         <TextBox Name="FilterTextBox" Height="30" TextWrapping="Wrap" VerticalAlignment="Center" Width="190" HorizontalAlignment="Left"  VerticalContentAlignment="Center" Margin="78,10,0,5" ToolTip="Введите фамилию или часть" FontSize="18" TextChanged="SearchStringChange"/>
         <Canvas Margin="0,0,0,0" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="#FFD8D8D8" />
@@ -34,8 +34,8 @@
             <!--x:Name="namedScroll" Height="{Binding ElementName=namedScroll, Path=ActualHeight}"-->
             <TabItem Header="Увольнения">
                 <Grid Background="#FFE5E5E5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                    <!--<ScrollViewer HorizontalAlignment="Stretch" VerticalAlignment="Stretch" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Disabled">-->
-                        <DockPanel  HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ScrollViewer.VerticalScrollBarVisibility ="Visible" ScrollViewer.CanContentScroll="True">
+                    <ScrollViewer HorizontalAlignment="Stretch" VerticalAlignment="Stretch" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Visible">
+                        <DockPanel  HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                             <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Top" Height="auto" Orientation="Vertical" Width="180">
                                 <Label Content=" " HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="30" BorderThickness="1" BorderBrush="Black" Grid.Row="0"/>
                                 <DataGrid Name="GridNames" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" 
@@ -46,78 +46,21 @@
                                         </Style>
                                     </DataGrid.RowStyle>
                                     <DataGrid.Columns>
-                                        <DataGridTextColumn Header="№" Width="Auto" Binding="{Binding Path=ThatManNum}"/>
-                                        <DataGridTextColumn Header="ФИО" Width="Auto" Binding="{Binding Path=ThatName}"/>
-                                        <DataGridTextColumn Header="Взвод" Width="Auto" Binding="{Binding Path=ThatPlatoon}" />
+                                        <DataGridTextColumn Header="№" Width="Auto" Binding="{Binding Path=ThatWDK}" />
+                                        <DataGridTextColumn Header="Взвод" Width="Auto" Binding="{Binding Path=ThatPlatoon}"/>
+                                        <DataGridTextColumn Header="ФИО" Width="*" Binding="{Binding Path=ThatName}"/>
                                     </DataGrid.Columns>
                                 </DataGrid>
                             </StackPanel>
 
-                            <ScrollViewer HorizontalAlignment="Stretch" VerticalAlignment="Stretch" VerticalScrollBarVisibility="Disabled" HorizontalScrollBarVisibility="Visible">
+                            <ScrollViewer HorizontalAlignment="Stretch" VerticalAlignment="Stretch" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Visible">
                                 <DockPanel Name="UvalStack" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                                     
                                 </DockPanel>
                             </ScrollViewer>
                         </DockPanel>
-                        
-                        <!--<Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="180"/>
-                                <ColumnDefinition Width="1*"/>
-                            </Grid.ColumnDefinitions>
-
-                            <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="30"/>
-                                    <RowDefinition Height="1*"/>
-                                </Grid.RowDefinitions>
-
-                                <Label Content=" " HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="30" BorderThickness="1" BorderBrush="Black" Grid.Row="0"/>
-                                <DataGrid Name="GridNames" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="1"
-                                          GridLinesVisibility="All" ClipToBounds="True" AutoGenerateColumns="False" CanUserAddRows="False" IsReadOnly="True"  CanUserDeleteRows="False" CanUserSortColumns="False">
-                                    <DataGrid.RowStyle>
-                                        <Style  TargetType="DataGridRow">
-                                            <Setter Property="Background" Value="{Binding Path=ThatColor, Converter={StaticResource IntColorConverter}}"/>
-                                        </Style>
-                                    </DataGrid.RowStyle>
-                                    <DataGrid.Columns>
-                                        <DataGridTextColumn Header="№" Width="Auto" Binding="{Binding Path=ThatManNum}"/>
-                                        <DataGridTextColumn Header="ФИО" Width="Auto" Binding="{Binding Path=ThatName}"/>
-                                        <DataGridTextColumn Header="Взвод" Width="Auto" Binding="{Binding Path=ThatPlatoon}"/>
-                                    </DataGrid.Columns>
-                                </DataGrid>
-                            </Grid>-->
-                        <!--</Grid>-->
-
-                        <!--<DockPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                            <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Orientation="Vertical" Width="180">
-                                <Label Content=" " HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="30" BorderThickness="1" BorderBrush="Black" Grid.Row="0"/>
-                                <DataGrid Name="GridNames" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="1"
-                                          GridLinesVisibility="All" ClipToBounds="True" AutoGenerateColumns="False" CanUserAddRows="False" IsReadOnly="True"  CanUserDeleteRows="False" CanUserSortColumns="False">
-                                    <DataGrid.RowStyle>
-                                        <Style  TargetType="DataGridRow">
-                                            <Setter Property="Background" Value="{Binding Path=ThatColor, Converter={StaticResource IntColorConverter}}"/>
-                                        </Style>
-                                    </DataGrid.RowStyle>
-                                    <DataGrid.Columns>
-                                        <DataGridTextColumn Header="№" Width="Auto" Binding="{Binding Path=ThatManNum}"/>
-                                        <DataGridTextColumn Header="ФИО" Width="Auto" Binding="{Binding Path=ThatName}"/>
-                                        <DataGridTextColumn Header="Взвод" Width="Auto" Binding="{Binding Path=ThatPlatoon}" />
-                                    </DataGrid.Columns>
-                                </DataGrid>
-                            </StackPanel>
-                            <ScrollViewer HorizontalAlignment="Stretch" VerticalAlignment="Stretch" VerticalScrollBarVisibility="Disabled" HorizontalScrollBarVisibility="Visible">
-                                <DockPanel  HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                                    <StackPanel Name="UvalStack" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Orientation="Horizontal">
-                                        
-                                    </StackPanel>
-                                </DockPanel>
-                            </ScrollViewer>
-                        </DockPanel>-->
-
-                            
-                        
-                    <!--</ScrollViewer>-->
+        
+                    </ScrollViewer>
                 </Grid>
             </TabItem>
 
@@ -137,7 +80,7 @@
                             <DataGridTextColumn Header="Сила" Width="Auto" Binding="{Binding Path=ThatForce}"/>
                             <DataGridTextColumn Header="Выносливость" Width="Auto" Binding="{Binding Path=ThatStamina}"/>
                             <DataGridTextColumn Header="Общая оценка" Width="Auto" Binding="{Binding Path=ThatMark}"/>
-                            <DataGridTextColumn Header="Освобождение до" Width="Auto" Binding="{Binding Path=ThatFree}"/>
+                            <DataGridTextColumn Header="Освобождение до" Width="*" Binding="{Binding Path=ThatFreedom}"/>
                         </DataGrid.Columns>
 
                     </DataGrid>
@@ -157,7 +100,7 @@
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="ФИО" Width="Auto" Binding="{Binding Path=ThatName}" IsReadOnly="True"/>
                             <DataGridTextColumn Header="Поощрения" Width="Auto" Binding="{Binding Path=ThatGoods}"/>
-                            <DataGridTextColumn Header="Взыскания" Width="Auto" Binding="{Binding Path=ThatBads}"/>
+                            <DataGridTextColumn Header="Взыскания" Width="*" Binding="{Binding Path=ThatBads}"/>
                         </DataGrid.Columns>
                     </DataGrid>
                 </Grid>
@@ -176,33 +119,41 @@
                             <Label Content="Добавление нового периода" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="#FF858383"/>
                             <Canvas Height="5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  />
                             <Label Content="Год" Background="#FF858383"/>
-                            <TextBox Name="PeriodYear" Height="23" TextWrapping="Wrap" ToolTip="Введите год" />
+                            <ComboBox Name="PeriodYear" HorizontalAlignment="Stretch">
+                                <TextBlock>2017</TextBlock>
+                                <TextBlock>2018</TextBlock>
+                                <TextBlock>2019</TextBlock>
+                                <TextBlock>2020</TextBlock>
+                                <TextBlock>2021</TextBlock>
+                                <TextBlock>2022</TextBlock>
+                                <TextBlock>2023</TextBlock>
+                                <TextBlock>2024</TextBlock>
+                                <TextBlock>2025</TextBlock>
+                            </ComboBox>
+                            <!--<TextBox Name="PeriodYear" Height="23" TextWrapping="Wrap" ToolTip="Введите год" />-->
                             <Canvas Height="10" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  />
                             <Label Content="Месяц" Background="#FF858383"/>
-                            <TextBox Name="PeriodMonth" Height="23" TextWrapping="Wrap" ToolTip="Введите месяц"/>
+                            <ComboBox Name="PeriodMonth" HorizontalAlignment="Stretch">
+                                <TextBlock>январь</TextBlock>
+                                <TextBlock>февраль</TextBlock>
+                                <TextBlock>март</TextBlock>
+                                <TextBlock>апрель</TextBlock>
+                                <TextBlock>май</TextBlock>
+                                <TextBlock>июнь</TextBlock>
+                                <TextBlock>июль</TextBlock>
+                                <TextBlock>август</TextBlock>
+                                <TextBlock>сентябрь</TextBlock>
+                                <TextBlock>октябрь</TextBlock>
+                                <TextBlock>ноябрь</TextBlock>
+                                <TextBlock>декабрь</TextBlock>
+                            </ComboBox>
+                            <!--<TextBox Name="PeriodMonth" Height="23" TextWrapping="Wrap" ToolTip="Введите месяц"/>-->
                             <Canvas Height="10" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  />
-                            <Label Content="Даты увольнений" Background="#FF858383"/>
+                            <Label Content="Количество дат увольнений" Background="#FF858383"/>
+                            <ComboBox Name="PeriodWeeks" HorizontalAlignment="Stretch" >
+                                <TextBlock>1</TextBlock><TextBlock>2</TextBlock><TextBlock>3</TextBlock><TextBlock>4</TextBlock><TextBlock>5</TextBlock><TextBlock>6</TextBlock><TextBlock>7</TextBlock><TextBlock>8</TextBlock><TextBlock>9</TextBlock>
+                            </ComboBox>
 
-                            <Grid HorizontalAlignment="Stretch" VerticalAlignment="Top" Height="100">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="70*"/>
-                                    <ColumnDefinition Width="5"/>
-                                    <ColumnDefinition Width="70*"/>
-                                </Grid.ColumnDefinitions>
-                                <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch" VerticalAlignment="Center">
-                                    <TextBox Name="PeriodDate" Height="23" TextWrapping="Wrap" ToolTip="Введите даты увольнений по одному"/>
-                                    <Button Content="Добавить" Click="ButAddDate_Click"/>
-                                </StackPanel>
-                                <Canvas HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  Grid.Column="1"/>
-
-                                <ListBox Name="PeriodDatesList" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Column="2">
-                                    <ListBox.ContextMenu>
-                                        <ContextMenu>
-                                            <MenuItem Header="Очистить список" Click="PeriodDatesList_Delete"></MenuItem>
-                                        </ContextMenu>
-                                    </ListBox.ContextMenu>
-                                </ListBox>
-                            </Grid>
                             <Canvas Height="10" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  />
 
                             <!--<Label Content="Расположение периода" Background="#FF858383"/>
@@ -231,15 +182,15 @@
                             <Canvas Height="5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  />
 
                             <Label Content="ФИО" Background="#FF858383"/>
-                            <TextBox Name="ManNameTextBox" Height="23" TextWrapping="Wrap" ToolTip="Введите ФИО военнослужащего"/>
+                            <TextBox Name="ManName" Height="23" TextWrapping="Wrap" ToolTip="Введите ФИО военнослужащего"/>
                             <Canvas Height="10" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  />
 
                             <Label Content="Взвод" Background="#FF858383"/>
-                            <TextBox Name="PlatoonTextBox" Height="23" TextWrapping="Wrap" ToolTip="Введите номер взвода"/>
+                            <TextBox Name="ManPlatoon" Height="23" TextWrapping="Wrap" ToolTip="Введите номер взвода"/>
                             <Canvas Height="10" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  />
 
                             <Label Content="Номер военнослужащего" Background="#FF858383"/>
-                            <TextBox Name="ManNumTextBox" Height="23" TextWrapping="Wrap" ToolTip="Введите ШДК военнослужащего"/>
+                            <TextBox Name="ManWDK" Height="23" TextWrapping="Wrap" ToolTip="Введите ШДК военнослужащего"/>
                             <Canvas Height="10" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  />
 
                             <Button Name="ButAddMan" Content="Добавить военнослужащего" HorizontalAlignment="Center" VerticalAlignment="Top"/>
