--- a/ArmyProjects/Uval4/MainWindow.xaml
+++ b/ArmyProjects/Uval4/MainWindow.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="Uval3.MainWindow"
+﻿<Window x:Class="Uval4.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Uval3"
-        xmlns:source="clr-namespace:Uval3.Source"
+        xmlns:local="clr-namespace:Uval4"
+        xmlns:source="clr-namespace:Uval4.Source"
         mc:Ignorable="d"
         Title="Статистика увольнений" MinHeight="610" Height="610" Width="625" Background="#FF9B9595" >
     <Window.Resources>
@@ -22,7 +22,7 @@
             </DataTemplate>
         </ResourceDictionary>
     </Window.Resources>
-    
+
     <Grid Name="MainGrid" Background="#FF878787">
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
@@ -68,11 +68,11 @@
 
                             <ScrollViewer HorizontalAlignment="Stretch" VerticalAlignment="Stretch" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Visible">
                                 <DockPanel Name="UvalStack" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                                    
+
                                 </DockPanel>
                             </ScrollViewer>
                         </DockPanel>
-        
+
                     </ScrollViewer>
                 </Grid>
             </TabItem>
@@ -81,7 +81,7 @@
                 <Grid Background="#FFE5E5E5">
                     <DataGrid Name="GridFizo" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch"
                         GridLinesVisibility="All" ClipToBounds="True" ScrollViewer.CanContentScroll="True" ScrollViewer.VerticalScrollBarVisibility="Visible"  ScrollViewer.HorizontalScrollBarVisibility="Visible"
-                        CanUserAddRows="False"  AutoGenerateColumns="False" CanUserDeleteRows="False">
+                        CanUserAddRows="False"  AutoGenerateColumns="False" CanUserDeleteRows="False" CanUserSortColumns="False">
                         <DataGrid.RowStyle>
                             <Style  TargetType="DataGridRow">
                                 <Setter Property="Background" Value="{Binding Path=ThatColor, Converter={StaticResource IntColorConverter}}"/>
@@ -104,7 +104,7 @@
                 <Grid Background="#FFE5E5E5">
                     <DataGrid Name="GridBadBoy" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch"
                         GridLinesVisibility="All" ClipToBounds="True" ScrollViewer.CanContentScroll="True" ScrollViewer.VerticalScrollBarVisibility="Visible"  ScrollViewer.HorizontalScrollBarVisibility="Visible"
-                        CanUserAddRows="False"  AutoGenerateColumns="False"  CanUserDeleteRows="False">
+                        CanUserAddRows="False"  AutoGenerateColumns="False"  CanUserDeleteRows="False" CanUserSortColumns="False">
                         <DataGrid.RowStyle>
                             <Style  TargetType="DataGridRow">
                                 <Setter Property="Background" Value="{Binding Path=ThatColor, Converter={StaticResource IntColorConverter}}"/>
@@ -143,7 +143,7 @@
                                 <TextBlock>2024</TextBlock>
                                 <TextBlock>2025</TextBlock>
                             </ComboBox>
-                            
+
                             <Canvas Height="10" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  />
                             <Label Content="Месяц" Background="#FF858383"/>
                             <ComboBox Name="PeriodMonth" HorizontalAlignment="Stretch" MaxDropDownHeight="100">
@@ -160,11 +160,19 @@
                                 <TextBlock>ноябрь</TextBlock>
                                 <TextBlock>декабрь</TextBlock>
                             </ComboBox>
-                            
+
                             <Canvas Height="10" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  />
                             <Label Content="Количество дат увольнений" Background="#FF858383"/>
                             <ComboBox Name="PeriodWeeks" HorizontalAlignment="Stretch" MaxDropDownHeight="100">
-                                <TextBlock>1</TextBlock><TextBlock>2</TextBlock><TextBlock>3</TextBlock><TextBlock>4</TextBlock><TextBlock>5</TextBlock><TextBlock>6</TextBlock><TextBlock>7</TextBlock><TextBlock>8</TextBlock><TextBlock>9</TextBlock>
+                                <TextBlock>1</TextBlock>
+                                <TextBlock>2</TextBlock>
+                                <TextBlock>3</TextBlock>
+                                <TextBlock>4</TextBlock>
+                                <TextBlock>5</TextBlock>
+                                <TextBlock>6</TextBlock>
+                                <TextBlock>7</TextBlock>
+                                <TextBlock>8</TextBlock>
+                                <TextBlock>9</TextBlock>
                             </ComboBox>
 
                             <Canvas Height="10" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  />
@@ -178,7 +186,7 @@
                                 </StackPanel>
                                 <ComboBox Name="PeriodSelect" DisplayMemberPath="ThatName" HorizontalAlignment="Stretch" MaxDropDownHeight="100"/>
                             </StackPanel>
-                           
+
                             <Canvas Height="10" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  />
 
                             <Button Name="ButAddPeriod" Content="Добавить период" HorizontalAlignment="Center" VerticalAlignment="Top"/>
