--- a/ArmyProjects/Torrent/MainWindow.xaml
+++ b/ArmyProjects/Torrent/MainWindow.xaml
@@ -26,14 +26,14 @@
                 <Label Content="Port" HorizontalAlignment="Left" VerticalAlignment="Top" Height="23" Width="34"/>
                 <TextBox Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="66"/>
             </StackPanel>
-            <Button Content="Connect" HorizontalAlignment="Stretch" VerticalAlignment="Top" Width="100" Grid.Row="1" Height="20"/>
+            <Button Content="Connect" HorizontalAlignment="Stretch" VerticalAlignment="Top" Width="100" Grid.Row="1" Height="20" Click="Button_Click" />
         </StackPanel>
 
         <ToolBar Grid.Column="1" HorizontalAlignment="Stretch" Height="18" VerticalAlignment="Center" Width="414" Background="#FFBABCBF">
             <Button VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
                 <Image Source="Resources/Up_arrow.png"/>
             </Button>
-            <Button Height="19">
+            <Button>
                 <Image Source="Resources/Left_arrow.png"/>
             </Button>
             <Button VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
@@ -42,7 +42,7 @@
             <TextBox Height="14" Width="243" MinHeight="15"/>
 
         </ToolBar>
-        <DataGrid Grid.Column="1" Grid.Row="1" Width="414"/>
+        <Label HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Content="Mess" Grid.Column="1" Grid.Row="1"/>
 
     </Grid>
 </Window>
